Align issue fix 2
Attempt 2

--- a/index.css
+++ b/index.css
@@ -70,6 +70,9 @@ input[type=text]:focus{
 	width: 75px;
 	text-align: center;
 	font-size: 20px;
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
 	margin: 0px;
 }
 
